<resources>
    <string name="app_name">RemoteTV</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>

    <string name="volume">Volume</string>
    <string name="channel">Channel</string>
    <string name="samsung">SAMSUNG!</string>

    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="power">Power</string>
    <string name="VolUp">+</string>
    <string name="VulUp">+</string>
    <string name="VolDownButton">-</string>
    <string name="ChnDownButton">-</string>
    <string name="VolUpButton">+</string>
    <string name="ChnUpButton">+</string>
</resources>